--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,9 +17,9 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
         - run: |
-            echo '${github.action}'
-            echo '${github.action_ref}'
-            echo tree
+            echo '${{github.action}}'
+            echo '${{github.action_ref}}'
+            tree
                 
     
   
