--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,14 +12,19 @@ on:
     workflow_dispatch:
 
 jobs:
-  display-variables:
-    name: 'Build'
-    runs-on: 'ubuntu-latest'
+  Build:
+    runs-on: ubuntu-latest
     steps:
-        - run: |
-            echo '${{github.action}}'
-            echo '${{github.action_ref}}'
-            tree
+      - run: |
+          echo "🎉 The job was triggered by event: ${{ github.event_name }}"
+          echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ."
+
+      - uses: actions/checkout@v3.3.0
+
+      - name: List files in the repository
+        run: |
+          echo "The repository ${{ github.repository }} contains the following files:"
+          tree
                 
     
   
