--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -1,12 +1,13 @@
 name: CI Build for Docker Action
 on:
   push:
-    branches: main
+    branches:
+      - main
     paths: 
       - ./hello-world-docker-action/**
-      - ./.github/worflows/hello-world-docker-ci.yml
-      
+      - ./.github/worflows/hello-world-docker-ci.yml      
   workflow_dispatch:
+  
 jobs:
   test-action:
     runs-on: ubuntu-latest
