--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -1,19 +1,16 @@
 name: CI Build for Docker Action
 on:
   push:
-    branches:
-      - main
-    paths: 
-      - "./hello-world-docker-action/**"
-      - "./.github/worflows/hello-world-docker-ci.yml"
+    branches: [ main ]
+    paths: [ hello-world-docker-action/** ]
   workflow_dispatch:
-  
+
 jobs:
   test-action:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1.0.0
+        uses: actions/checkout@v3.3.0
 
       - name: Run my own container action
         id: hello-action
@@ -22,4 +19,4 @@ jobs:
           who-to-greet: '@StefanHuber'
 
       - name: Output time set in the container
-        run: echo "Action runs at ${{ steps.hello-action.outputs.time }}"
+        run: echo "The time was ${{ steps.hello-action.outputs.time }} when the action said hello"
